kubernetes/homepage/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
    externalTrafficPolicy: Local
    selector:
        app: homepage
    type: LoadBalancer
    loadBalancerClass: io.cilium/bgp-control-plane
    loadBalancerIP: 172.16.199.254
    ports:
        - protocol: TCP
          port: 443
          targetPort: 6443
